--- a/week02/styles/box-model.css
+++ b/week02/styles/box-model.css
@@ -1,15 +1,30 @@
 .callout {
-	
+	width: 400px;
+    margin: 10px;
+    border: 1px solid rgb(red, green, blue);
+    padding: 15px;
+    background-color: blueviolet;
+    color: aqua;
 }
 
 .callout img {
-	
+	position: rigth;
+    margin: 0 0 10px 15px;
+    border: 1px solid;
+    padding: 3px;
+    background-color: wheat;
+    width: 15px 0px;
+    height: auto;
 }
 
 blockquote {
-	
+	margin: 0;
 }
 
 cite {
-	
+	display: block;
+    border-top: 1px dotted #ffff;
+    padding-top: 0%;
+    text-align: right;
+    font-size: smaller;
 }
