--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,14 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+    font-size: 16px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
 nav {
     background-color: darkblue;
     padding: 10px;
@@ -11,6 +22,7 @@ nav a {
 
 h1 {
     color: darkblue;
+    padding: 5rem;
 }
 
 main img {
@@ -19,10 +31,12 @@ main img {
     border: 1px solid black;
     padding: 2px;
     box-shadow: 0 0 30px gray;
+    float: right;
+    margin: 0 0 1rem 1rem;
 }
 
 p {
-    padding: 0;
+    padding: 1rem;
 }
 
 main {
@@ -30,13 +44,9 @@ main {
 }
 
 aside {
-    width: 20rem;
-    margin: 1rem;
-    border: 1px solid rgb(0 0 0 / 0.2);
-    padding: 1rem;
-    background-color: #eee;
-    color: #333;
-    text-align: center;
+    width: 20em;
+    text-align: auto;
+    position: relative;
 }
 
 aside img {
@@ -44,8 +54,27 @@ aside img {
     height: auto;
 }
 
+aside h2 {
+  position: absolute;
+  top: 47px;
+  left: 150px;
+}
+
 footer {
     margin-top: 15px;
     border-top: 1px solid #000;
     text-align: center;
+}
+
+/* Class Selectors */
+.box {
+    margin: 1rem;
+    border: 1px solid rgba(0, 0, 0, .1);
+    padding: 1rem;
+    background-color: #eeee;
+    color: #000;
+}
+
+.indent {
+    padding-left: 2rem;
 }
