--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -16,6 +16,7 @@
 body {
     font-family: var(--body-font);
     color: var(--accent1-color);
+    background-color: var(--accent2-color);
 }
 
 header, main, footer {
@@ -47,7 +48,7 @@ nav, p, section, article {
     height: auto;
 }
 
-h1 {
+.hero h1 {
   position: absolute;
   top: 20px;
   width: 100%;
@@ -58,7 +59,12 @@ h1 {
   color: #fff;
 }
 
+.hero article {
+  position: absolute;
+}
+
 .hero article img {
   float: right;
   width: 125px;
+  position: absolute;
 }
