--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -1,11 +1,16 @@
 :root {
-  --primary-color: #055a05; 
+  --primary-color: #055a05;
   --secondary-color: #f4a261;
-  --accent1-color: #264653; 
-  --accent2-color: #e9c46a; 
+  --accent1-color: #264653;
+  --accent2-color: #e9c46a;
   --heading-font: "Times New Roman", "Georgia", serif;
   --body-font: Arial, Helvetica, sans-serif;
 }
+
+header {
+    background-color: var(--primary-color);
+    color: var(--accent2-color);
+  }
 
 * {
   margin: 0;
@@ -14,24 +19,23 @@
 }
 
 body {
-    font-family: var(--body-font);
-    color: var(--accent1-color);
-    background-color: var(--accent2-color);
+  font-family: var(--body-font);
+  color: var(--accent1-color);
 }
 
 header, main, footer {
-    width: 840px;
-    margin: 0 auto;
+  width: 840px;
+  margin: 0 auto;
 }
 
 h1, h2 {
-    font-family: var(--heading-font);
-    color: var(--primary-color);
+  font-family: var(--heading-font);
+  color: var(--primary-color);
 }
 
 nav, p, section, article {
-    margin: 16px;
-    padding: 8px;
+  margin: 16px;
+  padding: 8px;
 }
 
 .socialmedia a {
@@ -48,7 +52,7 @@ nav, p, section, article {
     height: auto;
 }
 
-.hero h1 {
+h1 {
   position: absolute;
   top: 20px;
   width: 100%;
@@ -60,11 +64,10 @@ nav, p, section, article {
 }
 
 .hero article {
-  position: absolute;
+    position: relative;
 }
 
 .hero article img {
   float: right;
   width: 125px;
-  position: absolute;
 }
