--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -52,7 +52,7 @@ nav, p, section, article {
     height: auto;
 }
 
-h1 {
+.hero h1 {
   position: absolute;
   top: 20px;
   width: 100%;
@@ -64,7 +64,7 @@ h1 {
 }
 
 .hero article {
-    position: relative;
+    position: absolute;
 }
 
 .hero article img {
