--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -72,3 +72,78 @@ nav, p, section, article {
   float: right;
   width: 125px;
 }
+
+header {
+  display: grid;
+  grid-template-columns: 200px 1fr;
+  align-items: center;
+  background-color: var(--primary-color);
+  padding: 16px;
+}
+
+header img {
+  width: 150px;
+}
+
+nav ul {
+  display: flex;
+  justify-content: flex-end;
+  list-style: none;
+  gap: 24px;
+}
+
+nav a {
+  text-decoration: none;
+  color: var(--accent2-color);
+  font-weight: bold;
+}
+
+nav a:hover {
+  color: var(--secondary-color);
+}
+
+section {
+  margin: 32px 0;
+}
+
+section h2 {
+  text-align: center;
+  margin-bottom: 16px;
+}
+
+section p {
+  text-align: center;
+  color: var(--accent1-color);
+}
+
+.adventures {
+  display: flex;
+  justify-content: space-between;
+  gap: 16px;
+}
+
+.adventures figure {
+  text-align: center;
+}
+
+.adventures img {
+  width: 150px;
+}
+
+footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: var(--primary-color);
+  color: var(--accent2-color);
+  padding: 16px;
+}
+
+.socialmedia {
+  display: flex;
+  gap: 16px;
+}
+
+.socialmedia img {
+  width: 32px;
+}
